added midi and osc indicators

--- a/webfolder/css/styles.css
+++ b/webfolder/css/styles.css
@@ -5,3 +5,11 @@
 .highlightedrow {
     background-color: #ccc;
 }
+
+.dot {
+    height: 15px;
+    width: 15px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+  }
